fix: add overflow-x hidden for input

--- a/src/core/form.scss
+++ b/src/core/form.scss
@@ -1,118 +1,142 @@
 .form {
-    background-color: $color-white;
-    .container {
-        padding-top: 42px;
-        @include media-breakpoint-down(md) {
-            padding-top: 0;
-        }
+  background-color: $color-white;
+
+  .container {
+    padding-top: 42px;
+
+    @include media-breakpoint-down(md) {
+      padding-top: 0;
     }
-    &__item {
-        width: 583px;
-        @include media-breakpoint-down(lg) {
-            width: 100%;
-        }
+  }
+
+  &__item {
+    overflow: hidden;
+    width: 583px;
+
+    @include media-breakpoint-down(lg) {
+      width: 100%;
     }
-    &__flex {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
+  }
+
+  &__flex {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  input::placeholder,
+  textarea::placeholder {
+    opacity: 1;
+    color: $color-brown;
+  }
+
+  select {
+    display: block;
+    width: 100%;
+    height: 59px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 23px;
+    color: $color-brown;
+    border: none;
+    border-radius: 0;
+    outline: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  }
+
+  input,
+  textarea {
+    border: none;
+    outline: none;
+    background: transparent;
+  }
+
+  input,
+  select,
+  textarea {
+    font: $roboto-regular-30;
+
+    @include media-breakpoint-down(sm) {
+      font: $roboto-regular-18;
     }
-    input::placeholder,
-    textarea::placeholder {
-        opacity: 1;
-        color: $color-brown;
+  }
+
+  &__subtitle {
+    width: 100%;
+    margin-bottom: 36px;
+    text-align: center;
+    font: $roboto-bold-30;
+
+    @include media-breakpoint-down(sm) {
+      font: $roboto-slab-bold-18;
     }
-    select {
-        display: block;
-        width: 100%;
-        height: 59px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 23px;
-        color: $color-brown;
-        border: none;
-        border-radius: 0;
-        outline: none;
-        -webkit-appearance: none;
-        -moz-appearance: none;
+  }
+
+  &__input {
+    width: 100%;
+    height: 59px;
+    padding-right: 23px;
+    padding-left: 23px;
+  }
+
+  &__label {
+    display: block;
+    font: $roboto-bold-30;
+
+    @include media-breakpoint-down(sm) {
+      font: $roboto-bold-21;
     }
-    input,
-    textarea {
-        border: none;
-        outline: none;
-        background: transparent;
+  }
+
+  &__custom-border {
+    position: relative;
+    display: block;
+    height: auto;
+    border: 1px solid $color-brown;
+
+    @include media-breakpoint-down(md) {
+      width: 100%;
     }
-    input,
-    select,
-    textarea {
-        font: $roboto-regular-30;
-        @include media-breakpoint-down(sm) {
-            font: $roboto-regular-18;
-        }
+  }
+
+  &__custom-border_fixed-height {
+    height: 137px;
+  }
+
+  &__triangle {
+    position: absolute;
+    top: 20px;
+    right: 19px;
+    width: 10px;
+    pointer-events: none;
+    border: 10px solid transparent;
+    border-top: 20px solid $color-brown;
+  }
+
+  &__file-input {
+    height: 42px;
+    margin-bottom: 32px;
+    font-size: 20px;
+
+    @include media-breakpoint-down(sm) {
+      margin-bottom: 5px;
     }
-    &__subtitle {
-        width: 100%;
-        margin-bottom: 36px;
-        text-align: center;
-        font: $roboto-bold-30;
-        @include media-breakpoint-down(sm) {
-            font: $roboto-slab-bold-18;
-        }
+  }
+
+  &__textarea {
+    width: 100%;
+    height: 133px;
+    padding-top: 10px;
+    padding-right: 23px;
+    padding-left: 23px;
+  }
+
+  &__file-input_hidden-sm {
+    @include media-breakpoint-down(sm) {
+      display: none;
     }
-    &__input {
-        width: 100%;
-        height: 59px;
-        padding-right: 23px;
-        padding-left: 23px;
-    }
-    &__label {
-        display: block;
-        font: $roboto-bold-30;
-        @include media-breakpoint-down(sm) {
-            font: $roboto-bold-21;
-        }
-    }
-    &__custom-border {
-        position: relative;
-        display: block;
-        height: auto;
-        border: 1px solid $color-brown;
-        @include media-breakpoint-down(md) {
-            width: 100%;
-        }
-    }
-    &__custom-border_fixed-height {
-        height: 137px;
-    }
-    &__triangle {
-        position: absolute;
-        top: 20px;
-        right: 19px;
-        width: 10px;
-        pointer-events: none;
-        border: 10px solid transparent;
-        border-top: 20px solid $color-brown;
-    }
-    &__file-input {
-        height: 42px;
-        margin-bottom: 32px;
-        font-size: 20px;
-        @include media-breakpoint-down(sm) {
-            margin-bottom: 5px;
-        }
-    }
-    &__textarea {
-        width: 100%;
-        height: 133px;
-        padding-top: 10px;
-        padding-right: 23px;
-        padding-left: 23px;
-    }
-    &__file-input_hidden-sm {
-        @include media-breakpoint-down(sm) {
-            display: none;
-        }
-    }
+  }
 }
